Fix findbugs/sonar violations in sfc-vpp-utils
- Utility classes should not have public constructors
- Method invokes inefficient new String(String) constructor
- Private method is never called
- Method invokes inefficient Number constructor; use static valueOf instead

Change-Id: I5316b01a63490b44d4bcb6f0fe9a1a5d7b609560
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>